tests/NormalTests/paczka1/small_fuzzy/89904442.err
Error in line 7: W1zB5NNIE A662 34,5
Error in line 14: roICS7367,0
Error in line 15: N8SIOwzCV Af62 211,4
Error in line 16: roIC S527 72,19
